css: fix alignment of right arrow

--- a/assets/style.css
+++ b/assets/style.css
@@ -880,6 +880,8 @@ footer-credits {
 }
 .slider .next::after {
   content: "→";
+  left: auto;
+  right: 0;
 }
 /* PAGES
 ================================================== */
